--- a/HandsOn/Group27/analysis.html
+++ b/HandsOn/Group27/analysis.html
@@ -19,5 +19,18 @@
     <p># Instance of CivicStructure example:<br />## resource identifier -&gt; Using 'S'+ID provided by the dataset <br />http://www.semanticweb_g27.org/resource/CivicStructure/S28079004</p>
     <p># Instance of Observation example:<br />## resource identifier -&gt; Using 'O'+ID provided by the dataset <br />http://www.semanticweb_g27.org/resource/Observation/O28079004_1_38</p>
     <p># Instance of GeoCoordinates example:<br />## resource identifier -&gt; Using 'GEO_'+Related_Object_ID<br />http://www.semanticweb_g27.org/resource/GeoCoordinates/GEO_M28</p>
+	
+	<h5><strong>Licensing of the data source </strong></h5>
+	<h6><strong>Publisher of the dataset as well as the licence of the dataset</strong></h6>
+	<p>The publisher of the dataset is “Ayuntamiento de Madrid”.
+
+	The dataset license is OGL-ROU-1.0. It is free comercial and no comercial use with some conditions.
+	It is forbidden to distort the meaning of the information. The source of the documents to be reused must be cited.  
+	The date of the last update of the documents to be reused must be mentioned.  
+	It may not indicate, insinuate or suggest that the Madrid City Council participates, sponsors or supports the reuse that is carried out with the information. 
+	Metadata on the date of update and applicable reuse conditions, including the following, must be retained, not altered or deleted. 
+
+	Our licence CC BY-NC 
+	Others can remix, adapt, and build upon your work non-commercially, and although their new works must also acknowledge you and be non-commercial. </p>
 </body>
 </html>
